ConsolidatedFinalScript/VPCplussingleECtwoinstance.yaml
Resources:
 HandyProVPC:
  Type: AWS::EC2::VPC
  Properties:
   CidrBlock: 172.20.0.0/16 
   EnableDnsHostnames: true
   InstanceTenancy: default
   Tags:
    - Key: Name
      Value: HandyProVPC
    - Key: StackName
      Value: !Ref AWS::StackId	
    - Key: Project
      Value: HandyPro	
 PublicSubnetHPro:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref HandyProVPC
   AvailabilityZone: us-east-1a
   CidrBlock: 172.20.10.0/28
   Tags:
    - Key: Name
      Value: HandyProPublicSubnet
    - Key: StackName
      Value: !Ref AWS::StackId	
    - Key: Project
      Value: HandyPro
   MapPublicIpOnLaunch: true
 PrivateSubnetHPro:
  Type: AWS::EC2::Subnet
  Properties:
   VpcId: !Ref HandyProVPC
   AvailabilityZone: us-east-1b
   CidrBlock: 172.20.20.0/28
   Tags:
    - Key: Name
      Value: HandyProPrivateSubnet
    - Key: StackName
      Value: !Ref AWS::StackId	
    - Key: Project
      Value: HandyPro
   MapPublicIpOnLaunch: false
 InternetGatewayHP:
  Type: AWS::EC2::InternetGateway
  Properties:
   Tags:
    - Key: Name
      Value: InternetGatewayHandyPro
    - Key: StackName
      Value: !Ref AWS::StackId	
    - Key: Project
      Value: HandyPro
 AttachIGtoVPCHP:
  Type: AWS::EC2::VPCGatewayAttachment
  Properties:
   VpcId: !Ref HandyProVPC
   InternetGatewayId: !Ref InternetGatewayHP
 PublicRouteTable:
  Type: AWS::EC2::RouteTable
  Properties:
   VpcId: !Ref HandyProVPC
   Tags:
     - Key: Name
       Value: RouteTableHandyPro
     - Key: StackName
       Value: !Ref AWS::StackId	
     - Key: Project
       Value: HandyPro
 PublicRouteRule: 
  Type: AWS::EC2::Route
  Properties:
   RouteTableId: !Ref PublicRouteTable
   DestinationCidrBlock: 0.0.0.0/0
   GatewayId: !Ref InternetGatewayHP
 PublicRoutetableSubnetAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
   RouteTableId: !Ref PublicRouteTable
   SubnetId: !Ref PublicSubnetHPro
 NatGateway:
  Type: "AWS::EC2::NatGateway"
  DependsOn: NatPublicIP
  Properties: 
   AllocationId: !GetAtt NatPublicIP.AllocationId
   SubnetId: !Ref PublicSubnetHPro
 NatPublicIP:
  Type: "AWS::EC2::EIP"
  DependsOn: HandyProVPC
  Properties:
   Domain: vpc
 PrivateRouteTable:
  Type: AWS::EC2::RouteTable
  Properties:
   VpcId: !Ref HandyProVPC
   Tags:
    - Key: Name
      Value: RouteTableHandyPro
    - Key: StackName
      Value: !Ref AWS::StackId	
    - Key: Project
      Value: HandyPro
 PrivateRouteRule: 
  Type: AWS::EC2::Route
  Properties:
   RouteTableId: !Ref PrivateRouteTable
   DestinationCidrBlock: 0.0.0.0/0
   NatGatewayId: !Ref NatGateway
 PrivateRoutetableSubnetAssociation:
  Type: AWS::EC2::SubnetRouteTableAssociation
  Properties:
   RouteTableId: !Ref PrivateRouteTable
   SubnetId: !Ref PrivateSubnetHPro
 GeneralsshSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupName: HandyProSSHRules
   GroupDescription: Enable SSH access via 22 & 7222
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0 
    - IpProtocol: tcp
      FromPort: 7222
      ToPort: 7222
      CidrIp: 0.0.0.0/0
   Tags: 
    - Key: Name
      Value: HandyProSSHSG
   VpcId: !Ref HandyProVPC
 GeneralHTTPSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupName: HandyProHTTPRules
   GroupDescription: Enable HTTP access via 80 & 8080
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0 
    - IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      CidrIp: 0.0.0.0/0
   Tags: 
    - Key: Name
      Value: HandyProHTTPSG
   VpcId: !Ref HandyProVPC
 GeneralHTTPsSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
   GroupName: HandyProHTTPsRules
   GroupDescription: Enable HTTPs access via 443
   SecurityGroupIngress:
    - IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0 
   Tags: 
    - Key: Name
      Value: HandyProHTTPsSG
   VpcId: !Ref HandyProVPC
 HandyProNWACLPublic:
  Type: AWS::EC2::NetworkAcl
  Properties:
   VpcId: !Ref HandyProVPC
   Tags:
    - Key: Name
      Value: HandyProNetworlACL
    - Key: Project
      Value: HandyPro
 InboundHandyProPublicNWAClEntry:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
   NetworkAclId: !Ref HandyProNWACLPublic
   RuleNumber: 100
   RuleAction: allow
   Protocol: 6
   Egress: false
   CidrBlock: 0.0.0.0/0
   PortRange:
    From: 20
    To: 500
 OutBoundHandyProPublicNWAClEntry:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
   NetworkAclId: !Ref HandyProNWACLPublic
   RuleNumber: '100'
   Protocol: '6'
   RuleAction: allow
   Egress: 'true'
   CidrBlock: 0.0.0.0/0
   PortRange:
    From: '0'
    To: '65535'
 PublicSubnetNWACLAssciation:
  Type: AWS::EC2::SubnetNetworkAclAssociation
  Properties:
   SubnetId: !Ref PublicSubnetHPro
   NetworkAclId: !Ref HandyProNWACLPublic
 HandyProNWACLPrivate:
  Type: AWS::EC2::NetworkAcl
  Properties:
   VpcId: !Ref HandyProVPC
   Tags:
    - Key: Name
      Value: HandyProNetworlACL
    - Key: Project
      Value: HandyPro
 INBoundHandyProPrivateNWAClEntry:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
   NetworkAclId: !Ref HandyProNWACLPrivate
   RuleNumber: 100
   RuleAction: allow
   Protocol: 6
   Egress: false
   CidrBlock: 0.0.0.0/0
   PortRange:
    From: 0
    To: 65535
 OutBoundHandyProPrivateNWAClEntry:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
   NetworkAclId: !Ref HandyProNWACLPrivate
   RuleNumber: '100'
   Protocol: '6'
   RuleAction: allow
   Egress: 'true'
   CidrBlock: 0.0.0.0/0
   PortRange:
    From: '0'
    To: '65535'
 PrivateSubnetNWACLAssciation:
  Type: AWS::EC2::SubnetNetworkAclAssociation
  Properties:
   SubnetId: !Ref PrivateSubnetHPro
   NetworkAclId: !Ref HandyProNWACLPrivate
 HandyProBastionInstance:
  Type: AWS::EC2::Instance
  Properties:
   InstanceType: t2.micro
   KeyName: Training
   ImageId: 'ami-02f664ededb0d5286'
   NetworkInterfaces:
    - AssociatePublicIpAddress: 'true'
      DeviceIndex: "0"
      GroupSet:
       - !Ref GeneralsshSecurityGroup 
       - !Ref GeneralHTTPSecurityGroup
       - !Ref GeneralHTTPsSecurityGroup
      SubnetId: !Ref PrivateSubnetHPro
